2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_get_capslist),
	(gst_gdk_pixbuf_set_property), (gst_gdk_pixbuf_get_property):
	  No need to special-case for Gdk-2.0 any longer, we require
	  Gdk 2.2 or newer; minor clean-ups.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/shout2/gstshout2.c: (gst_shout2send_base_init),
	(gst_shout2send_class_init), (gst_shout2send_init),
	(set_shout_metadata), (gst_shout2send_set_metadata),
	(gst_shout2send_event), (gst_shout2send_start),
	(gst_shout2send_connect), (gst_shout2send_stop),
	(gst_shout2send_render), (gst_shout2send_set_property),
	(gst_shout2send_get_property), (gst_shout2send_setcaps),
	(plugin_init):
	* ext/shout2/gstshout2.h:
	* po/POTFILES.in:
	  Rewrite a bit: use GstBaseSink::start and stop instead of a state
	  change function; use GST_ELEMENT_ERROR for error reporting, not
	  g_error() or GST_ERROR(); don't unref caps in setcaps function,
	  will cause crashes or assertion failures; remove (unused) "sync"
	  property, basesink already has such a property; misc. other
	  minor fixes and cleanups.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/esd/esdsink.c: (gst_esdsink_open), (gst_esdsink_prepare):
	* ext/esd/gstesd.c: (plugin_init):
	* po/POTFILES.in:
	  Add translatable error message for when we cannot
	  connect to the sound server, as "Cannot open resource
	  for writing" isn't really an acceptable message to show
	  to the user in this case.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/oss/gst-i18n-plugin.h:
	  Remove bogus file that doesn't belong here.

2006-04-17  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Philippe Valembois

	* ext/shout2/gstshout2.c: (gst_shout2send_init),
	(gst_shout2send_set_metadata), (gst_shout2send_event),
	(gst_shout2send_render), (gst_shout2send_change_state):
	* ext/shout2/gstshout2.h: